Reset password added

--- a/grp/templates/registration/profile.html
+++ b/grp/templates/registration/profile.html
@@ -25,6 +25,12 @@
                 </dl>
             </div>
         </div>
-    </div>
 
+    </div>
+{{ form.date }}
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type="submit" value="Submit">
+</form>
 {% endblock %}
