--- a/grp/templates/base_2.html
+++ b/grp/templates/base_2.html
@@ -5,12 +5,13 @@
 <header>
     <center>
     {% if request.user.is_authenticated %}
-    <a href="{% url "grp:logout" %}"> Выйти </a>
-    <a href="{% url "grp:edit_profile" %}" class="btn btn-sm btn-info">Редактировать</a>
-    <a href="{% url "grp:home" %}" class="btn btn-sm btn-info">На главную</a>
-    <a href="{% url "grp:profile" %}"> Профиль </a>
+    <a href="{% url "logout" %}"> Выйти </a>
+    <a href="{% url "edit_profile" %}" class="btn btn-sm btn-info">Редактировать</a>
+    <a href="{% url "home" %}" class="btn btn-sm btn-info">На главную</a>
+    <a href="{% url "profile" %}"> Профиль </a>
+    <a href="{% url "password_reset" %}"> reset</a>
     {% else %}
-        <a href="{% url "grp:login" %}"> Войти </a>
+        <a href="{% url "login" %}"> Войти </a>
     {% endif %}
     </center>
 </header>
