--- a/grp/templates/home.html
+++ b/grp/templates/home.html
@@ -12,7 +12,8 @@
             <br>
             <br>
             {% if request.user.is_authenticated %}
-            <a href="{% url "grp:profile" %}"> Войти </a>
+            <a href="{% url "profile" %}"> Войти </a>
+            <p><a href="{% url "password_reset" %}"> reset</a></p>
             {% else %}
                 <a href="login" class="hr">Войти</a>
             {% endif %}
