--- a/grp/templates/registration/password_reset_complete.html
+++ b/grp/templates/registration/password_reset_complete.html
@@ -1,18 +1,7 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% extends "base_2.html" %}
+{% block content %}
 
-{% block main %}
-<div  class="card">
-<div  class="card-body">
-<h4  class="card-title">Reset your password</h4>
-<form  method="post">
-{% csrf_token %}
-<input  type="hidden"  name="next"  value="{{ next }}">
-{{ form|crispy }}
+<h1>The password has been changed!</h1>
+<p><a href="{% url 'login' %}">log in again?</a></p>
 
-<button  type="submit"  class="btn btn-primary btn-block">Reset</button>
-</form>
-</div>
-</div>
-</div>
 {% endblock %}
