--- a/grp/templates/registration/password_reset_confirm.html
+++ b/grp/templates/registration/password_reset_confirm.html
@@ -1,18 +1,31 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% extends "base_2.html" %}
 
-{% block main %}
-<div  class="card">
-<div  class="card-body">
-<h4  class="card-title">Reset your password</h4>
-<form  method="post">
-{% csrf_token %}
-<input  type="hidden"  name="next"  value="{{ next }}">
-{{ form|crispy }}
+{% block content %}
 
-<button  type="submit"  class="btn btn-primary btn-block">Reset</button>
-</form>
-</div>
-</div>
-</div>
+    {% if validlink %}
+        <p>Please enter (and confirm) your new password.</p>
+        <form action="" method="post">
+            {% csrf_token %}
+            <table>
+                <tr>
+                    <td>{{ form.new_password1.errors }}
+                        <label for="id_new_password1">New password:</label></td>
+                    <td>{{ form.new_password1 }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.new_password2.errors }}
+                        <label for="id_new_password2">Confirm password:</label></td>
+                    <td>{{ form.new_password2 }}</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="submit" value="Change my password" /></td>
+                </tr>
+            </table>
+        </form>
+    {% else %}
+        <h1>Password reset failed</h1>
+        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+    {% endif %}
+
 {% endblock %}
