--- a/grp/templates/registration/password_reset_done.html
+++ b/grp/templates/registration/password_reset_done.html
@@ -1,18 +1,4 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
-
-{% block main %}
-<div  class="card">
-<div  class="card-body">
-<h4  class="card-title">Reset your password</h4>
-<form  method="post">
-{% csrf_token %}
-<input  type="hidden"  name="next"  value="{{ next }}">
-{{ form|crispy }}
-
-<button  type="submit"  class="btn btn-primary btn-block">Reset</button>
-</form>
-</div>
-</div>
-</div>
+{% extends "base_2.html" %}
+{% block content %}
+<p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
 {% endblock %}
