--- a/grp/templates/registration/password_reset_form.html
+++ b/grp/templates/registration/password_reset_form.html
@@ -1,18 +1,10 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% extends "base_2.html" %}
+{% block content %}
 
-{% block main %}
-<div  class="card">
-<div  class="card-body">
-<h4  class="card-title">Reset your password</h4>
-<form  method="post">
-{% csrf_token %}
-<input  type="hidden"  name="next"  value="{{ next }}">
-{{ form|crispy }}
-
-<button  type="submit"  class="btn btn-primary btn-block">Reset</button>
+<form action="" method="post">{% csrf_token %}
+    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
+        <p>{{ form.email }}</p>
+    <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
 </form>
-</div>
-</div>
-</div>
+
 {% endblock %}
