--- a/grp/templates/base_2.html
+++ b/grp/templates/base_2.html
@@ -3,6 +3,31 @@
 <html lang="en">
 <head>
 <header>
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    
+    <!-- Font Awesome -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    
+    <!-- Moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"
+      integrity="sha256-VBLiveTKyUZMEzJd6z2mhfxIqz3ZATCuVMawPZGzIfA=" crossorigin="anonymous"></script>
+    
+    <!-- Tempus Dominus Bootstrap 4 -->
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css"
+      integrity="sha256-XPTBwC3SBoWHSmKasAk01c08M6sIA5gF5+sRxqak2Qs=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/js/tempusdominus-bootstrap-4.min.js"
+      integrity="sha256-z0oKYg6xiLq3yJGsp/LsY9XykbweQlHl42jHv2XTBz4=" crossorigin="anonymous"></script>
+
     <center>
     {% if request.user.is_authenticated %}
     <a href="{% url "logout" %}"> Выйти </a>
@@ -16,14 +41,9 @@
     </center>
 </header>
 <style>
-   .center {
-    width: 200px; /* Ширина элемента в пикселах */
-    padding: 10px; /* Поля вокруг текста */
-    margin-top: 10%; /* Выравниваем по центру */
 
-   }
-body {background: url(https://html5book.ru/wp-content/uploads/2015/07/background39.png);}
-a {
+body#grp {background: url(https://html5book.ru/wp-content/uploads/2015/07/background39.png);}
+#grp a {
   text-decoration: none;
   outline: none;
   display: inline-block;
@@ -43,14 +63,14 @@ a {
   box-shadow: 0 8px 15px rgba(0,0,0,.1);
   transition: .3s;
 }
-a:hover {
+#grp a:hover {
   background: #2EE59D;
   box-shadow: 0 15px 20px rgba(46,229,157,.4);
   color: white;
   transform: translateY(-7px);
 }
 
-input[type="submit"] {
+#grp input[type="submit"] {
   text-decoration: none;
   outline: none;
   display: inline-block;
@@ -71,17 +91,22 @@ input[type="submit"] {
   transition: .3s;
 }
 
-input[type="submit"]:hover {
+#grp input[type="submit"]:hover {
   background: #2EE59D;
   box-shadow: 0 15px 20px rgba(46,229,157,.4);
   color: white;
   transform: translateY(-7px);
 }
 
+#grp .center {
+  width: 200px; /* Ширина элемента в пикселах */
+  padding: 10px; /* Поля вокруг текста */
+  margin-top: 10%; /* Выравниваем по центру */
+}
 
 </style>
 </head>
-<body>
+<body id="grp">
     {% include 'blocks/messages.html' %}
     {% block content %}
 
